--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -1,3 +1,11 @@
+html {
+  background: url(../images/jhenephoto1.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body {
   font:15px/1.5 Tahoma, sans-serif;
   padding:0;
@@ -19,10 +27,18 @@ ul{
 
 /* Header **/
 header{
-  background: rgba(0, 0, 0, 0.50);
-  color:#ffffff;
-  padding-top:30px;
-  min-height:70px;
+  width: 100%;
+  height: 55px;
+  padding: 0 30px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.50);;
+  -webkit-box-shadow: 0px 5px 35px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 5px 35px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 35px 0px rgba(0,0,0,0.75);
+  z-index: 5;
 }
 
 header a{
@@ -47,7 +63,7 @@ header #branding h1{
 
 header nav{
   float:middle;
-  margin-top:10px;
+  margin-top:15px;
 }
 
 header a:hover{
