--- a/assets/stylesheets/shows.css
+++ b/assets/stylesheets/shows.css
@@ -1,6 +1,5 @@
-/* Core Styles**/
-.about-banner{
-  background: url('../images/jhenephoto2.jpg') no-repeat center center;
+html {
+  background: url(../images/jhenephoto1.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -12,12 +11,6 @@ body {
   padding:0;
   margin: 0;
   background-color: #ffffff;
-}
-
-img {
-  display: block;
-  width: 100%
-  height: auto;
 }
 
 /* Global **/
@@ -34,10 +27,18 @@ ul{
 
 /* Header **/
 header{
-  background: rgba(0, 0, 0, 0.68);
-  color:#ffffff;
-  padding-top:30px;
-  min-height:70px;
+  width: auto;
+  height: 55px;
+  padding: 0 30px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.60);;
+  -webkit-box-shadow: 0px 5px 35px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 5px 35px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 35px 0px rgba(0,0,0,0.75);
+  z-index: 10;
 }
 
 header a{
@@ -61,20 +62,11 @@ header #branding h1{
 }
 
 header nav{
-  float:mid;
-  margin-top:10px;
+  float:middle;
+  margin-top:15px;
 }
 
 header a:hover{
   color:#cccccc;
   font-weight:bold;
   }
-
-nav{
-  width: 100%;
-  height: auto;
-  display: none;
-  position: relative;
-  z-index: 10;
-  background-color: rgba(33, 33, 33, 0.2);
-}
