Fixing Sizing of Banner
baby steps

--- a/assets/stylesheets/shows.css
+++ b/assets/stylesheets/shows.css
@@ -1,5 +1,6 @@
-html {
-  background: url(../images/jhenephoto1.jpg) no-repeat center center fixed;
+#showcase{
+  min-height:600px;
+  background:url('../images/jhenephoto2.jpg') no-repeat  0 -0.20px;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
