--- a/assets/stylesheets/shows.css
+++ b/assets/stylesheets/shows.css
@@ -14,13 +14,6 @@ body {
   background-color: #ffffff;
 }
 
-/* Global **/
-.container{
-  width:80%;
-  margin:auto;
-  overflow:hidden;
-}
-
 ul{
   margin:0;
   padding:0;
@@ -71,3 +64,20 @@ header a:hover{
   color:#cccccc;
   font-weight:bold;
   }
+
+  th {
+    text-align: left;
+  }
+
+.container {
+  position: relative;
+  text-align: left;
+  color: black;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
