--- a/assets/stylesheets/music.css
+++ b/assets/stylesheets/music.css
@@ -1,194 +1,114 @@
-* {
-  box-sizing: border-box;
+#showcase{
+  min-height:500px;
+  background:url('../images/jhenephoto10.jpg') no-repeat  0 -10px;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
-html, body {
-  width: 100%;
-  height: 100%;
-  font-family: 'Tahoma', sans-serif;
-  -webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+body {
+  font:15px/1.5 Tahoma, sans-serif;
+  padding:0;
   margin: 0;
-  padding: 0;
+  background-color: #ffffff;
 }
 
-.secondary-font{
-  font-family: 'Rozha One', serif;
-}
-
+/* Global **/
 .container{
-  position: relative;
-  margin: auto;
-  padding: 0 20px;
+  width:80%;
+  margin:auto;
+  overflow:hidden;
 }
 
-a {
-  text-decoration: none;
+ul{
+  margin:0;
+  padding:0;
 }
 
-.header {
-  width: 100%;
-  height: 45px;
-  padding: 0 10px;
+/* Header **/
+header{
+  width: auto;
+  height: 55px;
+  padding: 0 30px;
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
-  background-color: rgba(33, 33, 33, 0.5);
+  background-color: rgba(0, 0, 0, 0.60);;
   -webkit-box-shadow: 0px 5px 35px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 5px 35px 0px rgba(0,0,0,0.75);
   box-shadow: 0px 0px 35px 0px rgba(0,0,0,0.75);
   z-index: 10;
 }
 
-.logo {
-  max-height: 45px;
-  float: left;
-  padding: 5px 0;
-  font-family: 'Rozha One', serif;
+header a{
+  color:#ffffff;
+  text-decoration:none;
+  font-size:16px;
 }
 
-.logo > a {
-  display: inline-block;
-  height: 100%;
-  line-height: 45px;
-  color: #fff;
-  font-size: 24px;
+header li{
+  float:left;
+  display:inline;
+  padding: 0 20px 0 20px;
 }
 
-nav{
-  width: 100%;
-  height: auto;
-  display: none;
-  position: relative;
-  z-index: 10;
-  background-color: rgba(33, 33, 33, 0.5);
+header #branding{
+  float:left;
 }
 
-nav > a {
-  width: 100%;
-  height: 40px;
-  float: left;
-  padding: 5px 10px;
-  color: #fff;
+header #branding h1{
+  margin:0;
 }
 
-.mobile-menu-icon {
-  width: 36px;
-  height: 45px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  position: absolute;
-  top: 0;
-  right: 1rem;
-  padding: 15px 10px;
-  z-index: 10;
+header nav{
+  float:middle;
+  margin-top:15px;
 }
 
-.mobile-menu-icon > div {
-  width: 100%;
-  height: 1px;
-  background: #fff;
-}
-
-.mobile-menu-icon:hover {
-  cursor: pointer;
-  background-color: rgba(33, 33, 33, 0.75);
-}
-
-@media (min-width: 736px) {
-  nav{
-    height: 45px;
-    font-size: 0;
-    display: flex !important;
-    justify-content: flex-end;
-    background-color: transparent;
+header a:hover{
+  color:#cccccc;
+  font-weight:bold;
   }
-  nav > a {
-    width: auto;
-    height: 100%;
-    display: inline-block;
-    padding: 0 10px;
-    font-size: 14px;
-    text-decoration: none;
-    line-height: 45px;
-    transition: all .25s ease-in-out;
+
+  /* Section D / Boxes */
+
+  #section-a .box {
+    padding: 2em;
+    color: black;
   }
-  .mobile-menu-icon {
-    display: none;
+
+  #section-a .box:first-child {
+    background: #01d86f;
   }
-}
 
-nav > a:hover, nav > a.active{
-  background-color: rgba(0,0,0, 0.75);
-}
-
-section{
-  width: 100%;
-  height: auto;
-  margin: 25px auto;
-}
-
-.section-title{
-  margin-bottom: 15px;
-}
-
-.image-responsive{
-  width: 100%;
-  height: auto;
-  display: block;
-}
-
-.page-banner{
-  width: 100%;
-  height: 300px;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-}
-
-.page-banner:after{
-  content: '';
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background-color: rgba(0,0,0, 0.75);
-}
-
-@media (min-width: 1960px){
-  .page-banner{
-    height: 600px;
+  #section-b .box {
+    padding: 2em;
+    background: #64a0a1;
   }
-}
 
-@media (min-width: 720px) and (max-width: 1959px){
-  .page-banner{
-    height: 450px;
+  #section-b .box:first-child {
+    padding: 2em;
+    color: black;
+    background: white;
   }
-}
 
-.page-banner > .banner-title {
-  color: #fff;
-  font-size: 32px;
-  text-shadow: 2px 0px 15px #666;
-  opacity: .5;
-  z-index: 1;
-}
-
-@media (min-width: 720px){
-  .page-banner > .banner-title {
-    font-size: 60px;
+  #section-c .box {
+    padding: 2em;
+    color: black;
   }
-}
 
-.about-banner{
-  background: url('../images/jhenephoto1.jpg') no-repeat center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
+  #section-c .box:first-child {
+    background: #8f9ea5;
+  }
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr repeat(2, minmax(auto, 25em)) 1fr;
+  }
+
+  .box,
+  #main-footer div {
+    grid-column: span 2;
+  }
