--- a/assets/stylesheets/shows.css
+++ b/assets/stylesheets/shows.css
@@ -79,11 +79,5 @@ header a:hover{
   position: relative;
   text-align: left;
   color: black;
-}
-
-.centered-a {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  padding: 50px;
 }
