--- a/assets/stylesheets/about.css
+++ b/assets/stylesheets/about.css
@@ -74,3 +74,32 @@ header a:hover{
 th {
   text-align: left;
 }
+
+#boxes{
+  margin-top:20px;
+}
+
+#boxes .box{
+  float:left;
+  text-align: center;
+  width:30%;
+  padding:10px;
+}
+
+/* Sidebar */
+aside#sidebar{
+  float:right;
+  width:50%;
+  margin-top:100px;
+}
+
+aside#sidebar .quote input, aside#sidebar .quote textarea{
+  width:90%;
+  padding:5px;
+}
+
+/* Main-col */
+article#main-col{
+  float:left;
+  width:45%;
+}
