--- a/assets/stylesheets/about.css
+++ b/assets/stylesheets/about.css
@@ -75,6 +75,33 @@ th {
   text-align: left;
 }
 
+h2{
+  text-align: center;
+  font-size:40px;
+}
+
+h3{
+  text-align: right;
+  font-size:30px;
+}
+
+.container-a {
+  width:80%;
+  margin:auto;
+}
+
+.column {
+  float: left;
+  width: 50%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 #boxes{
   margin-top:20px;
 }
@@ -90,7 +117,7 @@ th {
 aside#sidebar{
   float:right;
   width:50%;
-  margin-top:100px;
+  margin-top:150px;
 }
 
 aside#sidebar .quote input, aside#sidebar .quote textarea{
