Trying to get rid of padding
howwwwwwww :(

--- a/assets/stylesheets/about.css
+++ b/assets/stylesheets/about.css
@@ -85,6 +85,12 @@ h3{
   font-size:30px;
 }
 
+h4{
+  text-align: left;
+  font-size:20px;
+  padding: 0 0 0 20px;
+}
+
 .container-a {
   width:80%;
   margin:auto;
