--- a/assets/stylesheets/media.css
+++ b/assets/stylesheets/media.css
@@ -13,6 +13,22 @@
   overflow:hidden;
 }
 
+.container-a {
+  width:40%;
+  padding: 0 0 0 20px;
+}
+
+.container-b {
+  width:80%;
+  margin:auto;
+  padding: 0 0 0 20px;
+}
+
+.container-c {
+  width:80%;
+  padding: 0 0 0 20px;
+}
+
 body {
   font:15px/1.5 Tahoma, sans-serif;
   padding: 0;
@@ -73,6 +89,21 @@ header a:hover{
 
   th {
     text-align: left;
+  }
+
+  h2{
+    text-align: left;
+    font-size:40px;
+  }
+
+  h3{
+    text-align: left;
+    font-size:30px;
+  }
+
+  h4{
+    text-align: left;
+    font-size:30px;
   }
 
   /* Boxes */
